--- a/ui/public/i18n/en/translation.json
+++ b/ui/public/i18n/en/translation.json
@@ -70,7 +70,8 @@
         "select_backup_destination": "Select backup destination",
         "select_backup_snapshot": "Select backup snapshot",
         "select_file_or_folder_to_restore": "Select file or folder to restore",
-        "no_backup_destination": "No backup destination",
+        "no_backup_found": "No backup found",
+        "no_backup_found_description": "Ensure that a backup destination has been configured and that a backup has been performed for {module}",
         "from_node_name_of_this_cluster": "From node {name} of this cluster",
         "from_node_name_of_different_cluster": "From node {name} of a different cluster",
         "from_this_cluster": "From this cluster",
